--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
 			<ul>
 				<li><a href="reports/administrator/components.xml">administrator/components</a></li>
 				<li><a href="reports/administrator/includes.xml">administrator/includes</a></li>
+				<li><a href="reports/administrator/language.xml">administrator/language</a></li>
 				<li><a href="reports/administrator/modules.xml">administrator/modules</a></li>
 				<li><a href="reports/components.xml">components</a></li>
 				<li><a href="reports/includes.xml">includes</a></li>
+				<li><a href="reports/language.xml">language</a></li>
 				<li><a href="reports/libraries.xml">libraries</a></li>
 				<li><a href="reports/modules.xml">modules</a></li>
 				<li><a href="reports/plugins.xml">plugins</a></li>
