Helps to add install to the index

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 				<li><a href="reports/administrator/modules.xml">administrator/modules</a></li>
 				<li><a href="reports/components.xml">components</a></li>
 				<li><a href="reports/includes.xml">includes</a></li>
+				<li><a href="reports/installation.xml">installation</a></li>
 				<li><a href="reports/language.xml">language</a></li>
 				<li><a href="reports/libraries.xml">libraries</a></li>
 				<li><a href="reports/modules.xml">modules</a></li>
