--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
 	<head>
 		<title>Joomla! CMS PHPCS Results</title>
-		<link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet" />
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" type="text/javascript"></script>
-		<script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js" type="text/javascript"></script>
+		<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" />
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+		<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+		<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 	</head>
 	<body>
 		<div class="container">
@@ -11,7 +12,7 @@
 			<div>
 				<p>This is the result of the codestyle checker with all exceptions removed.  It is designed to aide in bringing the CMS in compliance with the Joomla! Coding Standard.</p>
 				<p>This analysis is based on commit <a href="https://github.com/joomla/joomla-cms/tree/d0d68945e9a35326e80734b6b0d16c0b56c5d6f2">d0d68945e9a35326e80734b6b0d16c0b56c5d6f2</a>.</p>
-				<p><span class="badge">Note</span> The results pages are rendered as a XML document with a XSL template, these will be slow to load.</p>
+				<p><span class="label label-primary">Note</span> The results pages are rendered as a XML document with a XSL template, these will be slow to load.</p>
 			</div>
 			<ul>
 				<li><a href="reports/administrator/components.xml">administrator/components</a></li>
