--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 		<div class="container">
 			<h2 class="page-header">Joomla! CMS Codestyle Test Results</h2>
 			<div>
-				<p>This is the result of the codestyle checker with all exceptions removed.  It is designed to aide in bringing the CMS in compliance with the Joomla! Coding Standard.</p>
-				<p>This analysis is based on commit <a href="https://github.com/joomla/joomla-cms/tree/1fd4cee1f938bd5cf072280130b922d640a7acf5">1fd4cee1f938bd5cf072280130b922d640a7acf5</a>.</p>
+				<p>This is the result of the codestyle checker with all exceptions removed.  It is designed to aide in bringing the CMS in compliance with the <a href="http://joomla.github.io/coding-standards/">Joomla! Coding Standards</a>.</p>
+				<p>This analysis is based on commit <a href="https://github.com/joomla/joomla-cms/tree/ecfcbd7f60a6a26d2e4672d4593dae070d97237a">ecfcbd7f60a6a26d2e4672d4593dae070d97237a</a>.</p>
 				<p><span class="label label-primary">Note</span> The results pages are rendered as a XML document with a XSL template, these will be slow to load.</p>
 			</div>
 			<ul>
